series CONTROLLER index and get series function

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 - ADD CHECK TO THE EMAIL BEING PASSED BEFORE SENDING RESET PASSWORD LINK
 - IMPLEMENT ADMIN AUTH
 - SHOULD LOGOUT BE A PROTECTED ROUTE WITH MIDDLEWARE
+-USE A BASE CONTROLLER TO HANDLE SUCCESS AND ERROR MESSAGES GRACEFULLY
