--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 - IMPLEMENT ADMIN AUTH
 - SHOULD LOGOUT BE A PROTECTED ROUTE WITH MIDDLEWARE
 -USE A BASE CONTROLLER TO HANDLE SUCCESS AND ERROR MESSAGES GRACEFULLY
+-ADD MOVIE FILE RULE TO UPDATE MOVIE REQUEST RESOURCE
