--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,8 @@
 - SHOULD LOGOUT BE A PROTECTED ROUTE WITH MIDDLEWARE
 -USE A BASE CONTROLLER TO HANDLE SUCCESS AND ERROR MESSAGES GRACEFULLY
 -ADD MOVIE FILE RULE TO UPDATE MOVIE REQUEST RESOURCE
+
+1.1
+-ADD custom flag to identify our movies, african streams = true
+-FIx Queue not going through
+-
