--- a/TODO.txt
+++ b/TODO.txt
@@ -7,4 +7,4 @@
 1.1
 -ADD custom flag to identify our movies, african streams = true
 -FIx Queue not going through
--
+-Send Email to customer after subsscription
